# comicshelf

./: .gitignore  .htrouter.php  Cargo.toml  Dockerfile.devcontainer  LICENSE  Makefile  README.md  api.go  comics.go  comicshelf.go  composer.json  config.go  db.go  docker-compose.yaml  go.mod  go.sum  index.html  key_reader.go  main.go  marvel.go  middleware.go  middleware_client.go  middleware_server.go  pom.xml  rustfmt.toml  series.go  server.go  set.go  user.go
.devcontainer/: devcontainer.json
.run/: ComicShelfApplication.run.xml  comicshelf server.run.xml  run server.run.xml
cmd/comicshelf/: config.go  default.yaml  fmt.go  main.go  marvel.go  server.go
cmd/hooks/: log_level.go  url.go  url_test.go
comicclient/: comicclient.go  config.go  middleware.go
comicclient/marvel/: cache.go  config.go  marvel.go  middleware.go
comichselfconfig/: log_level.go  url.go  url_test.go
config/: url.go  url_test.go
filedb/: filedb.go
http/: client.go  server.go
internal/comicclient/: comicclient.go  middleware.go
internal/filedb/: config.go
internal/server/: comics.go  series.go  server.go
internal/server/static/: index.js
internal/server/templates/: follow.html  index.html  templates.go
marvel/: config.go  marvel.go  middleware.go
public/: index.php
sdk/: pom.xml
server/: comics.go  config.go  middleware.go  pom.xml  series.go  server.go  user.go
server/static/: index.css
server/templates/: comic-card.html  follow.html  index.html  marvel-unlimited.html  templates.go  unfollow.html
src/: app.rs  comicshelf.rs  controllers.rs  errors.rs  main.rs  marvel.rs  middleware.rs  router.rs  template.rs  views.rs
src/Controllers/: ComicsController.php  IndexController.php
src/Services/: MarvelClient.php
src/Util/: Defer.php
src/Views/: base.phtml  comic-card.phtml  follow.phtml  index.phtml  unfollow.phtml
src/Views/Comics/: index.phtml
src/marvel/: auth.rs  controllers.rs  etag.rs  mod.rs  router.rs  views.rs
src/middleware/: mod.rs  uri.rs
static/: comic-card.html  index.css  index.html  index.js  marvel-unlimited.html  static.go  unfollow.html
static/comics/: comics.css  comics.html
templates/: base.html  comics.html  index.html  index1.html  marvel-unlimited.html
templates/partials/: card-actions.html  comic-card.html  follow.html  left-navbar.html  unfollow.html
(+74 files in other folders)
