[package]
name = "comicshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
chrono = "0.4.26"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
md5 = "0.7.0"
pin-project = "1.1.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tera = "1.19.0"
tokio = { version = "1.30.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
